Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-39172

Windows: Text.QtRendering renders wrong characters with Korean font families

    XMLWordPrintable

Details

    • 8306dee38f4e315399a465b028819b0777746c55

    Description

      When using Text.QtRendering renderType in Text element some of the rendered characters are invalid with Korean font families. The error is not reproducible with Text.NativeRendering.

      The attached screenshot shows invalid characters with Malgun Gothic font family. And the attached example project can be used to demonstrate the problem.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            esabraha Eskil Abrahamsen Blomfeldt
            qtcomsupport Qt Support
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes